fixed alignment issues

--- a/source/horoscope/css/horoscope.css
+++ b/source/horoscope/css/horoscope.css
@@ -161,9 +161,11 @@ label[for="category"] {
 #horoscope-title {
     position: relative; /* Set the position property to relative */
     
-    top: 110px; /* Adjust the top property to move the element vertically */
+    top: 180px; /* Adjust the top property to move the element vertically */
     
     font-family: 'pacifico';
+
+    z-index: 9999; /*bring elem forward*/
 }
 
 #horoscope-fortune {
@@ -176,7 +178,9 @@ label[for="category"] {
     padding: 30px;
     padding-top: 50px;
     border-radius: 20px;
-    background-image: linear-gradient(rgba(0, 17, 85, 0.75), rgba(0, 183, 255, 0.1));
+    background-image: linear-gradient(rgba(0, 17, 85, 0.75), rgba(0, 183, 255, 0.0));
+    position: relative;
+    top: 40px;
     /* border: 3px solid rgb(0, 128, 0); */
 }
 
